--- a/assets/css/less_parts/author.less
+++ b/assets/css/less_parts/author.less
@@ -3,6 +3,10 @@
 		display: none;
 	}
 
+	h3 {
+		 font-size: 2.5em;
+	}
+
 	.link-preview {
 		height: 167px;
 		background-size: cover !important;
