--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -20,6 +20,10 @@
 		width:25%;
 		margin:0;
 
+		.post-title {
+			margin:0;
+		}
+
 		@media(max-width: 800px){
 			padding: 0;
 	    width: auto;
@@ -67,6 +71,7 @@
 				.single-author-name {
 					color: @white;
 					font-size: 18px;
+					    margin: 0;
 
 					img {
 						height:20px;
