--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -20,6 +20,7 @@
 @import "less_parts/pagination.less";
 @import "less_parts/page.less";
 @import "less_parts/postheader.less";
+@import "less_parts/postlist.less";
 
 
 /*====================================================
@@ -195,7 +196,7 @@ p {
 	flex-wrap: wrap;
 	align-content: flex-start;
 	flex-flow: row wrap;
-	margin: 0 10px;
+	margin: 0 40px;
 
 	.about-author {
 		background-color: rgba(0, 6, 11, 0.78);
