--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -1,6 +1,23 @@
 .page-template {
-  .post-title{
-        margin: 40px 40px 0;
+
+  .post-title {
+    margin: 40px 100px 10px
+  }
+
+  .menu {
+        margin-top: 30px;
+        margin-right: 30px;
+  }
+
+  .page-head {
+    .post-title{
+          margin: 40px 30px 0;
+    }
+  }
+
+
+  .post-content {
+    margin: 20px 60px;
   }
 
   p {
