--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -10,6 +10,9 @@
 .author-template .container .tag-hash-upcoming {
   display: none;
 }
+.author-template h3 {
+  font-size: 2.5em;
+}
 .author-template .link-preview {
   height: 167px;
   background-size: cover !important;
@@ -188,6 +191,7 @@ a:focus {
 .btn-default:hover {
   border: 1px solid #40cebb;
   background: #40cebb;
+  color: #FFFFFF;
 }
 .btn-default:focus {
   outline: none;
@@ -230,7 +234,7 @@ pre {
   padding: 0;
   background: none;
   border: none;
-  margin: 20px 10px;
+  margin: 30px auto;
   font-size: 12px;
 }
 @media (max-width: 600px) {
@@ -247,11 +251,6 @@ pre {
   color: #FFFFFF;
   background: #26a2c7;
   text-shadow: none;
-}
-@media (max-width: 1000px) {
-  .postlist {
-    padding: 0 20px;
-  }
 }
 /*====================================================
 	footer
@@ -275,6 +274,9 @@ pre {
 .main-footer .widget {
   padding: 10px 0;
   width: 25%;
+  margin: 0;
+}
+.main-footer .widget .post-title {
   margin: 0;
 }
 @media (max-width: 800px) {
@@ -319,6 +321,7 @@ pre {
 .main-footer .widget .recent-post .single-author .single-author-name {
   color: #FFFFFF;
   font-size: 18px;
+  margin: 0;
 }
 .main-footer .widget .recent-post .recent-single-post .post-title img,
 .main-footer .widget .recent-post .single-author .post-title img,
@@ -360,6 +363,7 @@ pre {
 @media (max-width: 800px) {
   .videoHeader {
     height: 200px;
+    margin-bottom: 0;
   }
 }
 .videoHeader .videoObject {
@@ -429,7 +433,7 @@ pre {
 .videoHeader .navbar-header .nav-toggle-button:hover {
   cursor: pointer;
 }
-.videoHeader .main-navigation {
+.main-navigation {
   text-align: center;
   position: absolute;
   top: 0;
@@ -437,14 +441,15 @@ pre {
   right: 0;
   background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #0873c3 100%);
   height: 150px;
+  z-index: 100;
 }
 @media (max-width: 800px) {
-  .videoHeader .main-navigation {
+  .main-navigation {
     height: auto;
     background: none;
   }
 }
-.videoHeader .main-navigation .menu {
+.main-navigation .menu {
   padding: 0;
   margin: 30px 40px 0 auto;
   display: flex;
@@ -452,21 +457,20 @@ pre {
   width: 300px;
 }
 @media (max-width: 800px) {
-  .videoHeader .main-navigation .menu {
-    width: 190px;
-    position: absolute;
+  .main-navigation .menu {
+    width: 210px;
     margin: auto;
     left: 0;
     right: 0;
     margin-top: 142px;
   }
 }
-.videoHeader .main-navigation .menu li {
+.main-navigation .menu li {
   list-style: none;
   display: inline-block;
   position: relative;
 }
-.videoHeader .main-navigation .menu li a {
+.main-navigation .menu li a {
   color: white;
   line-height: 1;
   display: block;
@@ -478,27 +482,27 @@ pre {
   transition: all 0.2s ease-out;
 }
 @media (max-width: 600px) {
-  .videoHeader .main-navigation .menu li a {
+  .main-navigation .menu li a {
     padding: 0;
     font-weight: 500;
   }
 }
-.videoHeader .main-navigation .menu li:hover > a {
+.main-navigation .menu li:hover > a {
   text-shadow: 0 0 20px #b41eda;
   text-decoration: none;
   cursor: pointer;
   color: #40cebb;
 }
 @media (max-width: 600px) {
-  .videoHeader .main-navigation .menu li.nav-current {
+  .main-navigation .menu li.nav-current {
     padding: 0;
   }
 }
-.videoHeader .main-navigation .menu li.nav-current a {
+.main-navigation .menu li.nav-current a {
   color: #40cebb;
   font-size: 17px;
 }
-.videoHeader .main-navigation .menu li ul {
+.main-navigation .menu li ul {
   visibility: hidden;
   background: #FFFFFF;
   text-align: left;
@@ -520,14 +524,14 @@ pre {
   -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-.videoHeader .main-navigation .menu li ul li a {
+.main-navigation .menu li ul li a {
   line-height: 2.5em;
   color: #505050;
 }
-.videoHeader .main-navigation .menu li ul:hover > a {
+.main-navigation .menu li ul:hover > a {
   cursor: pointer;
 }
-.videoHeader .main-navigation .menu li:hover ul {
+.main-navigation .menu li:hover ul {
   visibility: visible;
   -webkit-opacity: 1;
   -moz-opacity: 1;
@@ -551,12 +555,26 @@ pre {
     margin: 0;
     width: 100% !important;
   }
-  .post-template .container .postlist {
-    margin: 20px;
+}
+.post-template h2 {
+  font-size: 2.5em;
+}
+@media (max-width: 800px) {
+  .post-template h2 {
+    font-size: 2em;
+  }
+}
+.post-template h3 {
+  font-size: 2em;
+}
+@media (max-width: 800px) {
+  .post-template h3 {
+    font-size: 1.6em;
   }
 }
 .post-template .sidebar,
-.post-template .main-header {
+.post-template .main-header,
+.post-template .main-navigation {
   display: none;
 }
 .post-template .post-meta {
@@ -644,6 +662,9 @@ pre {
 .post-template .post-content {
   margin: 20px 100px 40px;
 }
+.post-template .post-content img {
+  border: 1px solid #eaeaea;
+}
 @media (max-width: 600px) {
   .post-template .post-content {
     margin: 20px 40px 0;
@@ -718,6 +739,12 @@ pre {
   background: #FFFFFF;
   padding: 40px;
   margin: 20px 0;
+}
+@media (max-width: 600px) {
+  .post-template .about-author {
+    padding: 20px;
+    margin: 20px;
+  }
 }
 .post-template .about-author .avatar {
   width: 100px;
@@ -905,11 +932,6 @@ pre {
 .post .featured-media img {
   width: 100%;
 }
-@media (max-width: 800px) {
-  .post .featured-media img {
-    margin-top: -7%;
-  }
-}
 .post .featured-media a {
   transition: opacity 0.2s ease-out;
 }
@@ -924,7 +946,10 @@ pre {
 .post .post-content h3,
 .post .post-content h2 {
   margin-top: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
+}
+.post .post-content h2 {
+  color: #30b1a7;
 }
 .post .post-content ol,
 .post .post-content ul {
@@ -954,8 +979,13 @@ pre {
 .post .post-content img {
   max-width: 95%;
   border: 1px solid #eaeaea;
-  margin: auto;
+  margin: 30px auto;
   display: block;
+}
+@media (max-width: 600px) {
+  .post .post-content img {
+    width: 100%;
+  }
 }
 .post .post-content a {
   color: #764ea2;
@@ -973,7 +1003,7 @@ pre {
   list-style: none;
   display: inline-block;
   border: 1px solid #ebebeb;
-  padding: 4px 9px 2px;
+  padding: 5px 10px !important;
   transition: 0.2s all ease-out;
   border-radius: 2px;
   margin-left: 10px;
@@ -1041,7 +1071,6 @@ pre {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: calc(100% + 100px);
 }
 .container .main-content {
   padding-right: 0;
@@ -1066,7 +1095,7 @@ pre {
 .container .main-content .post-page .kg-card-markdown {
   margin: 0 !important;
   overflow-x: hidden;
-  padding: 20px 0;
+  padding: 0;
 }
 .container .main-content .about-author {
   background: #fff;
@@ -1075,12 +1104,12 @@ pre {
 }
 .container .main-content .prev-next-wrap {
   margin: 0;
-  text-align: center;
-  padding: 0 20px 24px;
+  padding: 0 20px 30px;
   background: #f0f1f4;
+  min-height: 70px;
 }
 .container .main-content .prev-next-wrap .btn {
-  max-width: 49%;
+  max-width: 39%;
 }
 .post-preview {
   padding: 0 !important;
@@ -1093,6 +1122,11 @@ pre {
 }
 .post-preview .post-head {
   margin: 10px 10px 20px;
+}
+@media (max-width: 600px) {
+  .post-preview .post-head {
+    margin: 0 10px 20px;
+  }
 }
 .post-preview i {
   margin-right: 5px;
@@ -1228,24 +1262,42 @@ pre {
 .post-preview.tag-video .post-content {
   margin: 0;
 }
-.page-about .author-container {
-  justify-content: space-around;
-}
-.page-about .author-specs {
-  display: flex;
-  justify-content: space-between;
+@media (max-width: 600px) {
+  .page-about h1 {
+    font-size: 2.5em;
+  }
 }
 .page-about .fluid-width-video-wrapper {
-  width: 90%;
-  margin: auto;
-  position: relative;
-  padding: 0;
+  height: 50px;
+}
+@media (max-width: 600px) {
+  .page-about .fluid-width-video-wrapper {
+    margin: 0 40px 30px;
+  }
 }
 .page-about .about-author {
   background: #FFFFFF;
   padding: 30px;
   margin: 10px 0;
   width: 40%;
+}
+@media (max-width: 600px) {
+  .page-about .about-author {
+    display: block;
+  }
+}
+.page-about .about-author .author-container {
+  justify-content: space-around;
+}
+.page-about .about-author .author-specs {
+  display: flex;
+  justify-content: space-between;
+}
+.page-about .about-author .fluid-width-video-wrapper {
+  width: 90%;
+  margin: auto;
+  position: relative;
+  padding: 0;
 }
 .page-about .about-author .avatar {
   width: 100px;
@@ -1297,6 +1349,24 @@ pre {
     display: block !important;
     width: 100%;
   }
+}
+.page-series .tag-container {
+  margin: 30px 60px;
+}
+.page-series .tag-wrapper {
+  margin-right: 30px;
+}
+.page-projects p {
+  margin: 0 !important;
+}
+.page-projects h2 {
+  margin-bottom: 20px !important;
+}
+.page-projects .repo .author {
+  margin-top: 10px;
+}
+.page-projects .repo img {
+  margin: 0;
 }
 .page-about .col-md-6 {
   padding: 0;
@@ -1407,7 +1477,7 @@ pre {
     width: 71%;
   }
   .sidebar {
-    width: 28%;
+    width: 26%;
   }
 }
 /*====================================================
@@ -1434,7 +1504,6 @@ pre {
     padding: 0 6%;
     margin: 0;
     border: 0;
-    position: relative;
   }
   .main-navigation .container {
     padding-right: 0;
@@ -1813,7 +1882,9 @@ pre {
 }
 @media (max-width: 800px) {
   .link-preview {
-    width: 100%;
+    width: 90%;
+    padding: 10px 4%;
+    display: block;
   }
 }
 .link-preview .preview-image {
@@ -1828,7 +1899,8 @@ pre {
 }
 @media (max-width: 600px) {
   .link-preview .preview-image {
-    width: 60%;
+    width: 100%;
+    height: 140px;
   }
 }
 .link-preview i {
@@ -1854,6 +1926,12 @@ pre {
   overflow: hidden;
   padding: 10px 20px;
 }
+@media (max-width: 800px) {
+  .link-preview .link-info {
+    padding: 0;
+    display: block;
+  }
+}
 .link-preview .link-info h4 {
   margin-top: 0;
   font-size: 1.5em;
@@ -1862,6 +1940,7 @@ pre {
 @media (max-width: 800px) {
   .link-preview .link-info h4 {
     font-size: 1.3em;
+    line-height: 1;
   }
 }
 .link-preview .link-info p {
@@ -2185,7 +2264,17 @@ pre {
   padding: 12px 14px;
 }
 .page-template .post-title {
-  margin: 40px 40px 0;
+  margin: 40px 100px 10px;
+}
+.page-template .menu {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.page-template .page-head .post-title {
+  margin: 40px 30px 0;
+}
+.page-template .post-content {
+  margin: 20px 60px;
 }
 .page-template p {
   margin: 20px 40px;
@@ -2200,7 +2289,7 @@ pre {
   float: left;
 }
 .post-header .post-navigation .menu {
-  width: 350px;
+  width: 300px;
   float: right;
   display: flex;
   justify-content: space-between;
@@ -2232,6 +2321,11 @@ pre {
 @media (max-width: 600px) {
   .post-header .post-navigation .menu li a {
     font-size: 16px;
+  }
+}
+@media (max-width: 800px) {
+  .postlist {
+    padding: 20px;
   }
 }
 /*====================================================
@@ -2373,7 +2467,7 @@ p {
   flex-wrap: wrap;
   align-content: flex-start;
   flex-flow: row wrap;
-  margin: 0 10px;
+  margin: 0 40px;
 }
 .author-container .about-author {
   background-color: rgba(0, 6, 11, 0.78);
