--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -67,6 +67,10 @@
 			.single-author {
 				border-bottom: 0;
 
+				a {
+					margin: 0;
+				}
+
 				.post-title,
 				.single-author-name {
 					color: @white;
