--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -1,7 +1,7 @@
 .page-template {
 
   .post-title {
-    margin: 40px 100px 10px
+    margin: 40px 40px 10px
   }
 
   .menu {
@@ -11,18 +11,25 @@
 
   .page-head {
     .post-title{
-          margin: 40px 30px 0;
+          margin: 40px 40px 0;
     }
   }
 
 
   .post-content {
-    margin: 20px 60px;
+    margin: 20px 40px;
+        /*width: 68%;*/
   }
 
   p {
-    margin: 20px 40px;
+    margin: 0 auto 20px;
   }
 
 
+}
+
+.mobile-branding {
+@media (max-width: 800px){
+  display: block;
+}
 }
