--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -196,7 +196,7 @@ p {
 	flex-wrap: wrap;
 	align-content: flex-start;
 	flex-flow: row wrap;
-	margin: 0 40px;
+	margin: 0 40px 20px;
 
 	.about-author {
 		background-color: rgba(0, 6, 11, 0.78);
