--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -8,7 +8,9 @@
 	position: relative;
 	margin-bottom: 35px;
 
-
+	@media(max-width: 800px) {
+		 margin-bottom: 0;
+	}
 }
 
 .videoHeader {
@@ -17,7 +19,7 @@
 	background-size: cover;
 	position: relative;
 	overflow: hidden;
-	border-bottom: 2px solid #27a2c7;
+	border-bottom: 1px solid #27a2c7;
 
 	@media(max-width: 800px) {
 		 height: 200px;
@@ -49,9 +51,7 @@
 		width:100%;
 		height:100%;
 
-		.mobile-branding {
-			display: none;
-		}
+
 
 		.branding {
 			position: absolute;
@@ -206,4 +206,17 @@
 		}
 	}
 
+}
+
+.mobile-branding {
+	display: none;
+	width: 50px;
+	float: left;
+	margin-top: 20px;
+
+	img {
+		 width: 100%;
+	}
+
+	
 }
