--- a/assets/css/less_parts/postlist.less
+++ b/assets/css/less_parts/postlist.less
@@ -1,5 +1,9 @@
 .postlist {
-  @media(max-width: 800px) {
+  @media(max-width: 1000px) {
+    padding: 0 20px;
+  }
+
+  @media(max-width: 1000px) {
     padding: 20px;
   }
 }
