--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -75,7 +75,7 @@ article p {
   line-height: 2em;
 }
 section > .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: auto;
 }
 .row {
@@ -315,6 +315,10 @@ pre {
 .main-footer .widget .recent-post .single-author {
   border-bottom: 0;
 }
+.main-footer .widget .recent-post .recent-single-post a,
+.main-footer .widget .recent-post .single-author a {
+  margin: 0;
+}
 .main-footer .widget .recent-post .recent-single-post .post-title,
 .main-footer .widget .recent-post .single-author .post-title,
 .main-footer .widget .recent-post .recent-single-post .single-author-name,
@@ -352,13 +356,18 @@ pre {
   position: relative;
   margin-bottom: 35px;
 }
+@media (max-width: 800px) {
+  .main-header {
+    margin-bottom: 0;
+  }
+}
 .videoHeader {
   width: 100%;
   height: 330px;
   background-size: cover;
   position: relative;
   overflow: hidden;
-  border-bottom: 2px solid #27a2c7;
+  border-bottom: 1px solid #27a2c7;
 }
 @media (max-width: 800px) {
   .videoHeader {
@@ -389,9 +398,6 @@ pre {
   top: 0;
   width: 100%;
   height: 100%;
-}
-.videoHeader .headerContainer .mobile-branding {
-  display: none;
 }
 .videoHeader .headerContainer .branding {
   position: absolute;
@@ -541,6 +547,15 @@ pre {
   filter: alpha(opacity=(100));
   top: 100%;
 }
+.mobile-branding {
+  display: none;
+  width: 50px;
+  float: left;
+  margin-top: 20px;
+}
+.mobile-branding img {
+  width: 100%;
+}
 .post-template {
   /*====================================================
 		main post area
@@ -582,6 +597,9 @@ pre {
   color: #9ea1ab;
   font-size: 14px;
 }
+.post-template .post-meta .author span {
+  text-transform: capitalize;
+}
 .post-template .container {
   margin: 0 auto;
   padding: 0;
@@ -606,7 +624,7 @@ pre {
   min-width: 200px;
   text-align: center;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .main-content table td,
   .post-template .main-content table th {
     min-width: 40px;
@@ -628,7 +646,7 @@ pre {
   margin: 0 100px;
   border-bottom: 1px solid #eaeaea;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .post-head {
     margin: 0 40px;
   }
@@ -638,7 +656,7 @@ pre {
   color: #9ea1ab;
   font-size: 14px;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .post-meta {
     margin: 10px 40px 0;
   }
@@ -652,6 +670,7 @@ pre {
 }
 .post-template .post-meta i {
   margin-right: 5px;
+  font-size: 11px;
 }
 @media (max-width: 800px) {
   .post-template .post-meta {
@@ -665,7 +684,7 @@ pre {
 .post-template .post-content img {
   border: 1px solid #eaeaea;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .post-content {
     margin: 20px 40px 0;
   }
@@ -689,7 +708,7 @@ pre {
   z-index: 100;
   opacity: 1;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template header .mobile-branding {
     height: 40px;
     width: 40px;
@@ -716,7 +735,7 @@ pre {
   height: 100px;
   z-index: 20;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .main-navigation {
     z-index: 20;
     width: auto;
@@ -728,7 +747,7 @@ pre {
   float: right;
   width: 300px;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .main-navigation .menu {
     width: 222px;
     margin: 20px 0;
@@ -740,7 +759,7 @@ pre {
   padding: 40px;
   margin: 20px 0;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .about-author {
     padding: 20px;
     margin: 20px;
@@ -754,7 +773,7 @@ pre {
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .about-author .avatar {
     width: 70px;
     height: 70px;
@@ -788,7 +807,7 @@ pre {
 .post-template .about-author .meta-info span i {
   margin-right: 7px;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-template .about-author .meta-info span {
     display: block !important;
     width: 100%;
@@ -806,7 +825,7 @@ pre {
   order: 0;
 }
 .post.page .page-head {
-  padding: 0 30px;
+  /*padding: 0 30px;*/
 }
 @media (max-width: 800px) {
   .post.page .page-head {
@@ -877,7 +896,7 @@ pre {
   display: block;
   /*white-space: nowrap;*/
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post .post-head .post-title {
     white-space: normal;
   }
@@ -895,7 +914,7 @@ pre {
   font-weight: 600;
   text-align: left;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post .post-head .post-excerpt {
     font-weight: 500;
     font-size: 1.2em;
@@ -913,7 +932,7 @@ pre {
 .post .post-head .post-meta i {
   margin-right: 10px;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post .post-head .post-meta i {
     display: none;
   }
@@ -968,7 +987,7 @@ pre {
   margin: 0;
   display: block;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post .post-content iframe {
     height: 100%;
   }
@@ -977,15 +996,10 @@ pre {
   margin: 20px auto;
 }
 .post .post-content img {
-  max-width: 95%;
+  max-width: 99%;
   border: 1px solid #eaeaea;
   margin: 30px auto;
   display: block;
-}
-@media (max-width: 600px) {
-  .post .post-content img {
-    width: 100%;
-  }
 }
 .post .post-content a {
   color: #764ea2;
@@ -1042,7 +1056,7 @@ pre {
 .post-footer .share {
   float: right;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .post-footer {
     border-top: 1px solid #f0f1f4;
   }
@@ -1099,8 +1113,6 @@ pre {
 }
 .container .main-content .about-author {
   background: #fff;
-  display: flex;
-  justify-content: space-between;
 }
 .container .main-content .prev-next-wrap {
   margin: 0;
@@ -1264,7 +1276,7 @@ pre {
 }
 @media (max-width: 600px) {
   .page-about h1 {
-    font-size: 2.5em;
+    font-size: 2em;
   }
 }
 .page-about .fluid-width-video-wrapper {
@@ -1283,7 +1295,7 @@ pre {
 }
 @media (max-width: 600px) {
   .page-about .about-author {
-    display: block;
+    display: block !important;
   }
 }
 .page-about .about-author .author-container {
@@ -1350,8 +1362,20 @@ pre {
     width: 100%;
   }
 }
+.page-series .page-head {
+  margin: 40px;
+  padding: 0;
+}
+.page-series .post-title {
+  margin: 40px 80PX 0;
+}
 .page-series .tag-container {
   margin: 30px 60px;
+}
+@media (max-width: 800px) {
+  .page-series .tag-container {
+    margin: 30px 40px;
+  }
 }
 .page-series .tag-wrapper {
   margin-right: 30px;
@@ -1367,6 +1391,23 @@ pre {
 }
 .page-projects .repo img {
   margin: 0;
+}
+.page-projects .post-content {
+  margin: 0;
+}
+@media (max-width: 800px) {
+  .page-projects .post-content {
+    width: 66%;
+  }
+}
+.page-projects p {
+  margin: 20px 0;
+}
+.post-series .page-head {
+  padding: 0;
+}
+.home-template .mobile-branding {
+  display: none;
 }
 .page-about .col-md-6 {
   padding: 0;
@@ -1872,9 +1913,9 @@ pre {
 }
 .link-preview {
   border: 1px solid #d2d2d2;
-  padding: 10px;
+  padding: 0;
   transition: all 0.2s ease-out;
-  border-radius: 3px;
+  border-radius: 5px;
   margin: 20px auto;
   background-color: #ffffff;
   display: flex;
@@ -1889,15 +1930,14 @@ pre {
 }
 .link-preview .preview-image {
   display: inline-block;
-  width: 40%;
-  min-width: 200px;
+  min-width: 250px;
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
-  border-radius: 2px;
-  border: 1px solid #ddd;
+  border-radius: 5px 0px 0px 5px;
+  border-right: 1px solid #d2d2d2;
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .link-preview .preview-image {
     width: 100%;
     height: 140px;
@@ -1924,7 +1964,8 @@ pre {
 .link-preview .link-info {
   display: inline-block;
   overflow: hidden;
-  padding: 10px 20px;
+  padding: 30px;
+  width: -webkit-fill-available;
 }
 @media (max-width: 800px) {
   .link-preview .link-info {
@@ -1933,9 +1974,10 @@ pre {
   }
 }
 .link-preview .link-info h4 {
-  margin-top: 0;
-  font-size: 1.5em;
+  margin: 0;
+  font-size: 1.35em;
   font-weight: 500;
+  line-height: 1;
 }
 @media (max-width: 800px) {
   .link-preview .link-info h4 {
@@ -2264,20 +2306,26 @@ pre {
   padding: 12px 14px;
 }
 .page-template .post-title {
-  margin: 40px 100px 10px;
+  margin: 40px 40px 10px;
 }
 .page-template .menu {
   margin-top: 30px;
   margin-right: 30px;
 }
 .page-template .page-head .post-title {
-  margin: 40px 30px 0;
+  margin: 40px 40px 0;
 }
 .page-template .post-content {
-  margin: 20px 60px;
+  margin: 20px 40px;
+  /*width: 68%;*/
 }
 .page-template p {
-  margin: 20px 40px;
+  margin: 0 auto 20px;
+}
+@media (max-width: 800px) {
+  .mobile-branding {
+    display: block;
+  }
 }
 .post-header .mobile-branding {
   height: 40px;
@@ -2323,7 +2371,12 @@ pre {
     font-size: 16px;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
+  .postlist {
+    padding: 0 20px;
+  }
+}
+@media (max-width: 1000px) {
   .postlist {
     padding: 20px;
   }
@@ -2467,7 +2520,7 @@ p {
   flex-wrap: wrap;
   align-content: flex-start;
   flex-flow: row wrap;
-  margin: 0 40px;
+  margin: 0 40px 20px;
 }
 .author-container .about-author {
   background-color: rgba(0, 6, 11, 0.78);
