--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -2,7 +2,7 @@
 	COLOR VARIABLE FOR THEME
 ====================================================*/
 @theme-color: #26a2c7;        // theme color
-@secondary-color: #764ea2;				// secondary theme color
+@secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
 @bg-color: #efefef;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
@@ -15,3 +15,4 @@
 @border-color: #ebebeb;
 @black: #000000;					// Pure black
 @white: #FFFFFF;					// Pure White
+@text-post-header: #20809c;
