--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -1,5 +1,4 @@
 .page-about {
-
   h1 {
     @media(max-width: 600px) {
       font-size: 2em;
@@ -7,11 +6,10 @@
   }
 
   .fluid-width-video-wrapper {
-        height: 50px;
-
-        @media(max-width: 600px) {
-          margin: 0 40px 30px;
-        }
+    height: 50px;
+    @media(max-width: 600px) {
+      margin: 0 40px 30px;
+    }
   }
 
   .about-author {
@@ -19,32 +17,25 @@
     padding: 30px;
     margin: 10px 0;
     width: 40%;
-
     @media(max-width: 600px) {
       display: block !important;
     }
 
-  .author-container {
-        justify-content: space-around;
-  }
+    .author-container {
+      justify-content: space-around;
+    }
 
+    .author-specs {
+      display: flex;
+      justify-content: space-between;
+    }
 
-
-
-
-  .author-specs{
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .fluid-width-video-wrapper {
-    width: 90%;
-    margin: auto;
-    position: relative;
-    padding: 0;
-}
-
-
+    .fluid-width-video-wrapper {
+      width: 90%;
+      margin: auto;
+      position: relative;
+      padding: 0;
+    }
 
     .avatar {
       width: 100px;
@@ -63,9 +54,9 @@
 
     .bio {
       display: block;
-      width:100%;
+      width: 100%;
       line-height: 1.5;
-      margin: 10px 0 0 0;
+      margin: 10px 0 0;
       font-weight: 100;
     }
 
@@ -104,33 +95,25 @@
 }
 
 .page-series {
-
-  .page-head{
-        margin: 40px;
-        padding: 0;
-  }
-
   .post-title {
-        margin: 40px 80PX 0;
+    margin: 40px 80PX 0;
   }
 
-  .tag-container {
-        margin: 30px 60px;
-
-        @media(max-width: 800px){
-              margin: 30px 40px;
-        }
+  p {
+    font-size: 16px;
+    color: #505050;
+    line-height: 1.3;
   }
 
-  .tag-wrapper{
+  .tag-wrapper {
     margin-right: 30px;
+    background: #025fa5;
   }
-
 }
 
 .page-projects {
   p {
-    margin:0 !important;
+    margin: 0 !important;
   }
 
   h2 {
@@ -141,40 +124,164 @@
     .author {
       margin-top: 10px;
     }
+
     img {
-          margin: 0;
+      margin: 0;
     }
   }
-
 }
 
 .page-projects {
   .post-content {
-        margin: 0;
-
-        @media(max-width: 800px) {
-          width: 66%;
-        }
+    margin: 0;
+    @media(max-width: 800px) {
+      width: 66%;
+    }
   }
 
-
-
-
-
-  p{
+  p {
     margin: 20px 0;
   }
 }
 
-
-.post-series{
+.post-series {
   .page-head {
-    padding:0;
+    padding: 0;
   }
 }
 
 .home-template {
-  .mobile-branding{
+  .mobile-branding {
     display: none;
   }
+}
+
+.tag-container {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	flex-flow: row wrap;
+  margin: 30px 40px;
+  @media(max-width: 800px) {
+    margin: 30px 40px;
+  }
+
+	.tag-wrapper {
+		background: #15475a;
+		width: 49%;
+		margin: 0 0 10px;
+		border: 1px solid #dadada;
+		transition: all 0.2s ease-out;
+		@media(max-width: 1040px) {
+			width: 100%;
+		}
+
+    h2,
+    p,
+    span {
+      color: white !important;
+    }
+
+    p {
+      text-align: center;
+    }
+
+    h2 {
+      font-weight: 500;
+    }
+
+		&:hover {
+			background-color: @theme-color;
+			border: 1px solid @theme-color;
+
+
+		}
+
+		a {
+			.img-wrapper {
+				background-size: cover;
+				background-position: center;
+				text-align: center;
+				width: 100%;
+				height: 180px;
+				position: relative;
+			}
+
+      .page-head {
+        margin: 0;
+        padding: 0;
+      }
+
+			.tag-title {
+        color: #505050;
+        color: white;
+        margin: 0 auto;
+        width: 100%;
+        background: #080c4e94;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+
+        h2 {
+          line-height: 1;
+          font-size: 1.5em;
+          margin:0 0 0 10px;
+        }
+
+        span {
+					font-size: 1.1em;
+
+          margin:0 10px 0 0;
+				}
+			}
+
+			.meta-info {
+				font-weight: 900;
+				color: white;
+				font-size: 12px;
+				padding: 10px;
+
+
+
+				i {
+					margin-right: 7px;
+				}
+			}
+
+			.description {
+				margin: 7px 0;
+				padding: 0 10px;
+			}
+
+			p {
+				font-size: 14px;
+				color: @text-color;
+			}
+
+			&.no-image {
+				.bg-wrapper {
+					.overlay {
+						color: @text-color;
+
+						.tag-title {
+							color: @text-color-heading;
+						}
+					}
+				}
+			}
+
+			&:hover {
+				text-decoration: none;
+				background: @hover-color;
+
+				.bg-wrapper {
+					.overlay {
+						background: @hover-color !important;
+					}
+				}
+			}
+		}
+	}
 }
