--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -210,7 +210,8 @@
 
 .mobile-branding {
 	display: none;
-	width: 50px;
+	width: 40px;
+	height: 40px;
 	float: left;
 	margin-top: 20px;
 
@@ -218,5 +219,5 @@
 		 width: 100%;
 	}
 
-	
+
 }
