--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -7,6 +7,34 @@
   .menu {
         margin-top: 30px;
         margin-right: 30px;
+
+        @media(max-width: 600px) {
+          width: 200px;
+          padding: 25px 20px;
+          display: flex;
+          justify-content: space-between;
+          float: right;
+          margin: 0;
+          list-style: none;
+        }
+
+        li {
+          display: inline-block;
+
+          a {
+            color:white;
+            font-family: 'mr-eaves-xl-modern', serif;
+            text-transform: uppercase;
+            font-size: 16px;
+            font-weight: 600;
+            transition: all 0.2s ease-out;
+
+            &:hover {
+              color: @hover-color;
+              cursor: pointer;
+            }
+          }
+        }
   }
 
   .page-head {
