--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -549,7 +549,8 @@ pre {
 }
 .mobile-branding {
   display: none;
-  width: 50px;
+  width: 40px;
+  height: 40px;
   float: left;
   margin-top: 20px;
 }
@@ -564,6 +565,7 @@ pre {
 .post-template .container {
   margin: 20px auto 0;
   padding: 0;
+  max-width: 1000px !important;
 }
 @media (max-width: 800px) {
   .post-template .container {
@@ -580,12 +582,7 @@ pre {
   }
 }
 .post-template h3 {
-  font-size: 2em;
-}
-@media (max-width: 800px) {
-  .post-template h3 {
-    font-size: 1.6em;
-  }
+  font-size: 1.5em;
 }
 .post-template .sidebar,
 .post-template .main-header,
@@ -606,7 +603,7 @@ pre {
 }
 .post-template .main-content {
   width: 100%;
-  max-width: 1100px;
+  max-width: 1000px;
   padding: 0 !important;
 }
 .post-template .main-content table {
@@ -684,13 +681,16 @@ pre {
 .post-template .post-content img {
   border: 1px solid #eaeaea;
 }
+.post-template .post-content p {
+  margin-top: 8px;
+}
 @media (max-width: 800px) {
   .post-template .post-content {
     margin: 20px 40px 0;
   }
 }
-.post-template header {
-  max-width: 1100px;
+.post-template .post-header {
+  max-width: 1000px;
   margin: auto;
   position: absolute;
   width: 100%;
@@ -698,9 +698,10 @@ pre {
   right: 0;
   padding: 0;
   background-image: none;
-  background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, rgba(13, 60, 93, 0.5) 100%);
+  background: linear-gradient(0deg, rgba(18, 13, 123, 0.01) 10%, rgba(0, 13, 105, 0.98) 100%);
+  z-index: 100;
 }
-.post-template header .mobile-branding {
+.post-template .post-header .mobile-branding {
   height: 50px;
   width: 50px;
   display: block;
@@ -709,18 +710,18 @@ pre {
   opacity: 1;
 }
 @media (max-width: 800px) {
-  .post-template header .mobile-branding {
+  .post-template .post-header .mobile-branding {
     height: 40px;
     width: 40px;
     margin: 15px;
   }
 }
-.post-template header .branding {
+.post-template .post-header .branding {
   float: left;
   z-index: 40;
   margin: 20px 0 0 30px;
 }
-.post-template header .branding img {
+.post-template .post-header .branding img {
   width: 200px !important;
   max-width: none;
 }
@@ -766,28 +767,37 @@ pre {
   }
 }
 .post-template .about-author .avatar {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
+  display: inline-block;
+  overflow: hidden;
   margin-right: 30px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
-@media (max-width: 800px) {
-  .post-template .about-author .avatar {
-    width: 70px;
-    height: 70px;
-  }
+.post-template .about-author .avatar img {
+  width: 100%;
+}
+.post-template .about-author .details {
+  display: inline-block;
+}
+.post-template .about-author .details span {
+  display: block;
+  line-height: 1em;
+  margin-bottom: 5px;
+}
+.post-template .about-author .details span i {
+  margin-right: 8px;
 }
 .post-template .about-author .bio {
   display: block;
-  float: left;
   line-height: 1.5;
   margin-top: 10px;
   font-weight: 100;
 }
 .post-template .about-author .author {
-  font-size: 1.3em;
+  font-size: 1.5em;
   margin-bottom: 5px;
 }
 .post-template .about-author .author a:hover {
@@ -861,7 +871,7 @@ pre {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-.post .roundup {
+.post .roundupTriangle {
   position: absolute;
   background: #81a1ab;
   color: white;
@@ -875,7 +885,7 @@ pre {
   z-index: 20;
   display: none;
 }
-.post .roundup i {
+.post .roundupTriangle i {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
@@ -966,9 +976,7 @@ pre {
 .post .post-content h2 {
   margin-top: 40px;
   margin-bottom: 0;
-}
-.post .post-content h2 {
-  color: #30b1a7;
+  color: #20809c;
 }
 .post .post-content ol,
 .post .post-content ul {
@@ -1002,7 +1010,7 @@ pre {
   display: block;
 }
 .post .post-content a {
-  color: #764ea2;
+  color: #30b1a7;
 }
 .post .post-content a:hover {
   color: #40cebb;
@@ -1141,24 +1149,34 @@ pre {
   }
 }
 .post-preview i {
-  margin-right: 5px;
-  font-size: 12px;
+  margin-right: 8px;
+  font-size: 18px;
 }
 .post-preview p {
   line-height: 1.5;
 }
 .post-preview .meta {
   display: flex;
-  width: 55%;
+  width: 60%;
   justify-content: space-between;
-  max-width: 350px;
+  max-width: 400px;
+}
+.post-preview .meta a {
+  color: #3d606b;
 }
 .post-preview .meta .meta-item {
-  display: block;
+  display: flex;
   margin: auto 0;
+  font-family: 'akzidenz-medium';
+}
+.post-preview .meta .meta-item.date span,
+.post-preview .meta .meta-item.date i {
+  font-family: 'akzidenz' !important;
+  color: #8e8e8e !important;
+  opacity: 0;
 }
 .post-preview .meta .meta-item * {
-  color: #6e7980;
+  /*color: #6e7980;*/
 }
 .post-preview .meta .meta-item a {
   text-decoration: none;
@@ -1192,7 +1210,7 @@ pre {
   padding: 10px;
 }
 .post-preview .post-permalink .btn {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 100;
   text-transform: uppercase;
   padding: 10px 20px;
@@ -1332,7 +1350,7 @@ pre {
   display: block;
   width: 100%;
   line-height: 1.5;
-  margin: 10px 0 0 0;
+  margin: 10px 0 0;
   font-weight: 100;
 }
 .page-about .about-author .author {
@@ -1362,23 +1380,17 @@ pre {
     width: 100%;
   }
 }
-.page-series .page-head {
-  margin: 40px;
-  padding: 0;
-}
 .page-series .post-title {
   margin: 40px 80PX 0;
 }
-.page-series .tag-container {
-  margin: 30px 60px;
-}
-@media (max-width: 800px) {
-  .page-series .tag-container {
-    margin: 30px 40px;
-  }
+.page-series p {
+  font-size: 16px;
+  color: #505050;
+  line-height: 1.3;
 }
 .page-series .tag-wrapper {
   margin-right: 30px;
+  background: #025fa5;
 }
 .page-projects p {
   margin: 0 !important;
@@ -1408,6 +1420,107 @@ pre {
 }
 .home-template .mobile-branding {
   display: none;
+}
+.tag-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  flex-flow: row wrap;
+  margin: 30px 40px;
+}
+@media (max-width: 800px) {
+  .tag-container {
+    margin: 30px 40px;
+  }
+}
+.tag-container .tag-wrapper {
+  background: #15475a;
+  width: 49%;
+  margin: 0 0 10px;
+  border: 1px solid #dadada;
+  transition: all 0.2s ease-out;
+}
+@media (max-width: 1040px) {
+  .tag-container .tag-wrapper {
+    width: 100%;
+  }
+}
+.tag-container .tag-wrapper h2,
+.tag-container .tag-wrapper p,
+.tag-container .tag-wrapper span {
+  color: white !important;
+}
+.tag-container .tag-wrapper p {
+  text-align: center;
+}
+.tag-container .tag-wrapper h2 {
+  font-weight: 500;
+}
+.tag-container .tag-wrapper:hover {
+  background-color: #26a2c7;
+  border: 1px solid #26a2c7;
+}
+.tag-container .tag-wrapper a .img-wrapper {
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  width: 100%;
+  height: 180px;
+  position: relative;
+}
+.tag-container .tag-wrapper a .page-head {
+  margin: 0;
+  padding: 0;
+}
+.tag-container .tag-wrapper a .tag-title {
+  color: #505050;
+  color: white;
+  margin: 0 auto;
+  width: 100%;
+  background: #080c4e94;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.tag-container .tag-wrapper a .tag-title h2 {
+  line-height: 1;
+  font-size: 1.5em;
+  margin: 0 0 0 10px;
+}
+.tag-container .tag-wrapper a .tag-title span {
+  font-size: 1.1em;
+  margin: 0 10px 0 0;
+}
+.tag-container .tag-wrapper a .meta-info {
+  font-weight: 900;
+  color: white;
+  font-size: 12px;
+  padding: 10px;
+}
+.tag-container .tag-wrapper a .meta-info i {
+  margin-right: 7px;
+}
+.tag-container .tag-wrapper a .description {
+  margin: 7px 0;
+  padding: 0 10px;
+}
+.tag-container .tag-wrapper a p {
+  font-size: 14px;
+  color: #505050;
+}
+.tag-container .tag-wrapper a.no-image .bg-wrapper .overlay {
+  color: #505050;
+}
+.tag-container .tag-wrapper a.no-image .bg-wrapper .overlay .tag-title {
+  color: #141624;
+}
+.tag-container .tag-wrapper a:hover {
+  text-decoration: none;
+  background: #40cebb;
+}
+.tag-container .tag-wrapper a:hover .bg-wrapper .overlay {
+  background: #40cebb !important;
 }
 .page-about .col-md-6 {
   padding: 0;
@@ -2312,6 +2425,32 @@ pre {
   margin-top: 30px;
   margin-right: 30px;
 }
+@media (max-width: 600px) {
+  .page-template .menu {
+    width: 200px;
+    padding: 25px 20px;
+    display: flex;
+    justify-content: space-between;
+    float: right;
+    margin: 0;
+    list-style: none;
+  }
+}
+.page-template .menu li {
+  display: inline-block;
+}
+.page-template .menu li a {
+  color: white;
+  font-family: 'mr-eaves-xl-modern', serif;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  transition: all 0.2s ease-out;
+}
+.page-template .menu li a:hover {
+  color: #40cebb;
+  cursor: pointer;
+}
 .page-template .page-head .post-title {
   margin: 40px 40px 0;
 }
@@ -2347,7 +2486,7 @@ pre {
 }
 @media (max-width: 600px) {
   .post-header .post-navigation .menu {
-    width: 250px;
+    width: 200px;
     padding: 25px 20px;
   }
 }
@@ -2381,12 +2520,110 @@ pre {
     padding: 20px;
   }
 }
+.meta .nodejs {
+  color: #83cc00;
+}
+.meta .nodejs i {
+  color: #83cc00 !important;
+}
+.meta .aws {
+  color: #e9903a;
+}
+.meta .aws i {
+  color: #e9903a !important;
+}
+.meta .django {
+  color: #43b78b;
+}
+.meta .django i {
+  color: #43b78b !important;
+}
+.meta .nosql {
+  color: #7bc553;
+}
+.meta .nosql i {
+  color: #7bc553 !important;
+}
+.meta .mysql {
+  color: #7277F4;
+}
+.meta .mysql i {
+  color: #7277F4 !important;
+}
+.meta .apis {
+  color: #7934b9;
+}
+.meta .apis i {
+  color: #7934b9 !important;
+}
+.meta .frontend {
+  color: #e8bf29;
+}
+.meta .frontend i {
+  color: #e8bf29 !important;
+}
+.meta .data {
+  color: #83cc00;
+}
+.meta .data i {
+  color: #83cc00 !important;
+}
+.meta .roundup {
+  color: #596cd2;
+}
+.meta .roundup i {
+  color: #596cd2 !important;
+}
+.meta .excel {
+  color: #008a00;
+}
+.meta .excel i {
+  color: #008a00 !important;
+}
+.meta .devops {
+  color: #de675a;
+}
+.meta .devops i {
+  color: #de675a !important;
+}
+.meta .pandas {
+  color: #d65daf;
+}
+.meta .pandas i {
+  color: #d65daf !important;
+}
+.meta .datascience {
+  color: #1CBBAF;
+}
+.meta .datascience i {
+  color: #1CBBAF !important;
+}
+.meta .tableau {
+  color: #da910b;
+}
+.meta .tableau i {
+  color: #da910b;
+}
+.meta .python {
+  color: #06bdea;
+}
+.meta .python i {
+  color: #06bdea;
+}
 /*====================================================
 	fonts
 ====================================================*/
 @font-face {
   font-family: 'akzidenz';
   src: url("../fonts/akzidenzgrotesk-bq-light-regular.otf") format("opentype");
+}
+@font-face {
+  font-family: 'akzidenz-bold';
+  src: url("../fonts/akzidenzgrotesk-bq-bold.otf") format("opentype");
+}
+@font-face {
+  font-family: 'akzidenz-medium';
+  src: url("../fonts/akzidenzgrotesk-bq-medium.otf") format("opentype");
 }
 /*====================================================
 	about author and comment and next-prev link
@@ -2486,7 +2723,7 @@ p {
   position: fixed;
   right: 10px;
   bottom: 10px;
-  background: rgba(118, 78, 162, 0.6);
+  background: rgba(48, 177, 167, 0.6);
   color: #FFFFFF;
   text-align: center;
   -webkit-border-radius: 2px;
@@ -2534,85 +2771,6 @@ p {
 }
 .author-container .meta-info {
   color: #505050;
-}
-.tag-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  flex-flow: row wrap;
-  margin: 30px;
-}
-.tag-container .tag-wrapper {
-  background: #FFFFFF;
-  width: 49%;
-  margin: 0 0 10px;
-  border: 1px solid #dadada;
-  transition: all 0.2s ease-out;
-}
-@media (max-width: 1040px) {
-  .tag-container .tag-wrapper {
-    width: 100%;
-  }
-}
-.tag-container .tag-wrapper:hover {
-  background-color: #26a2c7;
-  border: 1px solid #26a2c7;
-}
-.tag-container .tag-wrapper:hover h2,
-.tag-container .tag-wrapper:hover p,
-.tag-container .tag-wrapper:hover span {
-  color: white !important;
-}
-.tag-container .tag-wrapper a .img-wrapper {
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  width: 100%;
-  height: 180px;
-  position: relative;
-}
-.tag-container .tag-wrapper a .tag-title {
-  color: #505050;
-  line-height: 1;
-  font-size: 1.5em;
-  padding: 0 10px;
-  color: #141624;
-  margin: 10px 0;
-}
-.tag-container .tag-wrapper a .meta-info {
-  font-weight: 600;
-  color: #505050;
-  font-size: 12px;
-  padding: 10px;
-}
-.tag-container .tag-wrapper a .meta-info span {
-  font-size: 1.1em;
-}
-.tag-container .tag-wrapper a .meta-info i {
-  margin-right: 7px;
-}
-.tag-container .tag-wrapper a .description {
-  margin: 7px 0;
-  line-height: 1;
-  padding: 0 10px;
-}
-.tag-container .tag-wrapper a p {
-  font-size: 14px;
-  color: #505050;
-}
-.tag-container .tag-wrapper a.no-image .bg-wrapper .overlay {
-  color: #505050;
-}
-.tag-container .tag-wrapper a.no-image .bg-wrapper .overlay .tag-title {
-  color: #141624;
-}
-.tag-container .tag-wrapper a:hover {
-  text-decoration: none;
-  background: #40cebb;
-}
-.tag-container .tag-wrapper a:hover .bg-wrapper .overlay {
-  background: #40cebb !important;
 }
 /*====================================================
 	media query
