--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -2,15 +2,14 @@
 {{#foreach authors include="count.posts"}}
 <div class="about-author clearfix">
 	{{#if profile_image}}
-		<a href="{{url}}"><img src="{{profile_image}}" alt="Author image" class="avatar pull-left"></a>
+		<a href="{{url}}" class="avatar"><img src="{{profile_image}}" alt="Author image"></a>
 		{{else}}
-		<a href="{{url}}"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar pull-left"></a>
+		<a href="{{url}}" class="avatar"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image"></a>
 	{{/if}}
 	<div class="details">
 		<div class="author">
-			{{!--{{t "About"}}--}} <a href="{{url}}">{{name}}</a>
+			<a href="{{url}}">{{name}}</a>
 		</div>
-		<div class="meta-info">
 			{{!--<span class="post-count"><i class="fal fa-pencil"></i><a href="{{url}}">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</a></span>--}}
 			{{#if location}}
 				<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
@@ -32,7 +31,7 @@
 			{{{bio}}}
 		</div>
 		{{/if}}
-	</div>
+
 </div>
 {{/foreach}}
 <!-- end about the author -->
