--- a/assets/css/less_parts/postpreview.less
+++ b/assets/css/less_parts/postpreview.less
@@ -32,7 +32,7 @@
 		max-width: 400px;
 
 		a {
-			color: #3d606b;
+			color: #467192;
 		}
 
 		.meta-item {
@@ -40,12 +40,19 @@
 			margin: auto 0;
 			font-family: 'akzidenz-medium';
 
+			&.author {
+				span {
+					font-family: 'akzidenz-medium' !important;
+				}
+			}
+
 			&.date {
-				span,
-				i {
+				span {
 					font-family: 'akzidenz' !important;
 					color: #8e8e8e !important;
-					    opacity: 0;
+				}
+				i {
+					color: #8e8e8e !important;
 				}
 			}
 
