--- a/assets/css/less_parts/tags.less
+++ b/assets/css/less_parts/tags.less
@@ -1,4 +1,5 @@
-.meta {
+.meta,
+.post-meta {
   .nodejs {
     color: #83cc00;
 
@@ -64,10 +65,10 @@
   }
 
   .roundup {
-    color: #596cd2;
+    color: #6176f3;
 
     i {
-      color: #596cd2 !important;
+      color: #6176f3 !important;
     }
   }
 
@@ -116,6 +117,52 @@
 
     i {
       color: #06bdea;
+    }
+  }
+
+  .meta-item {
+    display: flex;
+    margin: auto 0;
+    font-family: 'akzidenz-medium';
+
+    &.author {
+      span {
+        font-family: 'akzidenz';
+      }
+    }
+
+    &.date {
+      span {
+        font-family: 'akzidenz' !important;
+        color: #8e8e8e !important;
+      }
+      i {
+        color: #8e8e8e !important;
+      }
+    }
+
+    * {
+      /*color: #6e7980;*/
+    }
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+        color: @hover-color;
+
+        & > span {
+          color: @hover-color !important;
+        }
+      }
+    }
+
+    .avi {
+      width: 20px;
+      height: 20px;
+      display: inline-block;
+      margin-right: 10px;
+      border-radius: 50%;
     }
   }
 }
