--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -257,7 +257,7 @@ pre {
 ====================================================*/
 .main-footer {
   background: linear-gradient(to bottom, rgba(0, 255, 196, 0.2), rgba(41, 58, 63, 0));
-  padding: 35px 20px;
+  padding: 35px 80px;
   color: white;
   margin-top: 30px;
   background-color: #3c465a;
@@ -269,6 +269,7 @@ pre {
   .main-footer {
     margin-top: 10px;
     display: block;
+    padding: 35px 20px;
   }
 }
 .main-footer .widget {
@@ -593,9 +594,14 @@ pre {
   margin: 10px 80px 0;
   color: #9ea1ab;
   font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
 }
 .post-template .post-meta .author span {
   text-transform: capitalize;
+  color: #467192;
+  font-family: 'akzidenz-medium' !important;
 }
 .post-template .container {
   margin: 0 auto;
@@ -667,12 +673,13 @@ pre {
 }
 .post-template .post-meta i {
   margin-right: 5px;
-  font-size: 11px;
+}
+.post-template .post-meta span {
+  align-items: center;
 }
 @media (max-width: 800px) {
   .post-template .post-meta {
-    display: flex;
-    justify-content: space-between;
+    width: auto;
   }
 }
 .post-template .post-content {
@@ -931,7 +938,8 @@ pre {
   }
 }
 .post .post-head .post-meta {
-  color: #959595;
+  width: auto;
+  max-width: 376px;
   margin: 15px 0 0;
   font-size: 12px;
   text-align: left;
@@ -1162,18 +1170,22 @@ pre {
   max-width: 400px;
 }
 .post-preview .meta a {
-  color: #3d606b;
+  color: #467192;
 }
 .post-preview .meta .meta-item {
   display: flex;
   margin: auto 0;
   font-family: 'akzidenz-medium';
 }
-.post-preview .meta .meta-item.date span,
-.post-preview .meta .meta-item.date i {
+.post-preview .meta .meta-item.author span {
+  font-family: 'akzidenz-medium' !important;
+}
+.post-preview .meta .meta-item.date span {
   font-family: 'akzidenz' !important;
   color: #8e8e8e !important;
-  opacity: 0;
+}
+.post-preview .meta .meta-item.date i {
+  color: #8e8e8e !important;
 }
 .post-preview .meta .meta-item * {
   /*color: #6e7980;*/
@@ -1386,7 +1398,7 @@ pre {
 .page-series p {
   font-size: 16px;
   color: #505050;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 .page-series .tag-wrapper {
   margin-right: 30px;
@@ -1418,8 +1430,27 @@ pre {
 .post-series .page-head {
   padding: 0;
 }
-.home-template .mobile-branding {
-  display: none;
+.tag-title {
+  color: white;
+  margin: 0;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #001b2f 100%);
+  height: 100px;
+  padding: 20px;
+}
+.tag-title h2 {
+  line-height: 1;
+  font-size: 1.5em;
+  margin: 0;
+  font-weight: 600;
+  height: fit-content;
+}
+.tag-title span {
+  font-size: 1.1em;
+  margin: 0;
+  font-weight: 600;
 }
 .tag-container {
   display: flex;
@@ -1439,23 +1470,23 @@ pre {
   width: 49%;
   margin: 0 0 10px;
   border: 1px solid #dadada;
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-out;
 }
 @media (max-width: 1040px) {
   .tag-container .tag-wrapper {
     width: 100%;
   }
 }
+.tag-container .tag-wrapper:hover .tag-title {
+  background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #007ad4 100%);
+  height: 150px;
+}
 .tag-container .tag-wrapper h2,
-.tag-container .tag-wrapper p,
 .tag-container .tag-wrapper span {
   color: white !important;
 }
 .tag-container .tag-wrapper p {
   text-align: center;
-}
-.tag-container .tag-wrapper h2 {
-  font-weight: 500;
 }
 .tag-container .tag-wrapper:hover {
   background-color: #26a2c7;
@@ -1466,44 +1497,30 @@ pre {
   background-position: center;
   text-align: center;
   width: 100%;
-  height: 180px;
+  height: 250px;
   position: relative;
 }
 .tag-container .tag-wrapper a .page-head {
   margin: 0;
   padding: 0;
 }
-.tag-container .tag-wrapper a .tag-title {
-  color: #505050;
-  color: white;
-  margin: 0 auto;
-  width: 100%;
-  background: #080c4e94;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.tag-container .tag-wrapper a .tag-title h2 {
-  line-height: 1;
-  font-size: 1.5em;
-  margin: 0 0 0 10px;
-}
-.tag-container .tag-wrapper a .tag-title span {
-  font-size: 1.1em;
-  margin: 0 10px 0 0;
-}
 .tag-container .tag-wrapper a .meta-info {
   font-weight: 900;
   color: white;
   font-size: 12px;
-  padding: 10px;
+  padding: 0;
 }
 .tag-container .tag-wrapper a .meta-info i {
   margin-right: 7px;
 }
 .tag-container .tag-wrapper a .description {
-  margin: 7px 0;
-  padding: 0 10px;
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.9);
+  margin: 5px;
+  position: absolute;
+  bottom: 0;
+  color: #162c52;
+  font-family: 'akzidenz-medium';
 }
 .tag-container .tag-wrapper a p {
   font-size: 14px;
@@ -1521,6 +1538,9 @@ pre {
 }
 .tag-container .tag-wrapper a:hover .bg-wrapper .overlay {
   background: #40cebb !important;
+}
+.home-template .mobile-branding {
+  display: none;
 }
 .page-about .col-md-6 {
   padding: 0;
@@ -2520,95 +2540,168 @@ pre {
     padding: 20px;
   }
 }
-.meta .nodejs {
+.meta .nodejs,
+.post-meta .nodejs {
   color: #83cc00;
 }
-.meta .nodejs i {
+.meta .nodejs i,
+.post-meta .nodejs i {
   color: #83cc00 !important;
 }
-.meta .aws {
+.meta .aws,
+.post-meta .aws {
   color: #e9903a;
 }
-.meta .aws i {
+.meta .aws i,
+.post-meta .aws i {
   color: #e9903a !important;
 }
-.meta .django {
+.meta .django,
+.post-meta .django {
   color: #43b78b;
 }
-.meta .django i {
+.meta .django i,
+.post-meta .django i {
   color: #43b78b !important;
 }
-.meta .nosql {
+.meta .nosql,
+.post-meta .nosql {
   color: #7bc553;
 }
-.meta .nosql i {
+.meta .nosql i,
+.post-meta .nosql i {
   color: #7bc553 !important;
 }
-.meta .mysql {
+.meta .mysql,
+.post-meta .mysql {
   color: #7277F4;
 }
-.meta .mysql i {
+.meta .mysql i,
+.post-meta .mysql i {
   color: #7277F4 !important;
 }
-.meta .apis {
+.meta .apis,
+.post-meta .apis {
   color: #7934b9;
 }
-.meta .apis i {
+.meta .apis i,
+.post-meta .apis i {
   color: #7934b9 !important;
 }
-.meta .frontend {
+.meta .frontend,
+.post-meta .frontend {
   color: #e8bf29;
 }
-.meta .frontend i {
+.meta .frontend i,
+.post-meta .frontend i {
   color: #e8bf29 !important;
 }
-.meta .data {
+.meta .data,
+.post-meta .data {
   color: #83cc00;
 }
-.meta .data i {
+.meta .data i,
+.post-meta .data i {
   color: #83cc00 !important;
 }
-.meta .roundup {
-  color: #596cd2;
+.meta .roundup,
+.post-meta .roundup {
+  color: #6176f3;
 }
-.meta .roundup i {
-  color: #596cd2 !important;
+.meta .roundup i,
+.post-meta .roundup i {
+  color: #6176f3 !important;
 }
-.meta .excel {
+.meta .excel,
+.post-meta .excel {
   color: #008a00;
 }
-.meta .excel i {
+.meta .excel i,
+.post-meta .excel i {
   color: #008a00 !important;
 }
-.meta .devops {
+.meta .devops,
+.post-meta .devops {
   color: #de675a;
 }
-.meta .devops i {
+.meta .devops i,
+.post-meta .devops i {
   color: #de675a !important;
 }
-.meta .pandas {
+.meta .pandas,
+.post-meta .pandas {
   color: #d65daf;
 }
-.meta .pandas i {
+.meta .pandas i,
+.post-meta .pandas i {
   color: #d65daf !important;
 }
-.meta .datascience {
+.meta .datascience,
+.post-meta .datascience {
   color: #1CBBAF;
 }
-.meta .datascience i {
+.meta .datascience i,
+.post-meta .datascience i {
   color: #1CBBAF !important;
 }
-.meta .tableau {
+.meta .tableau,
+.post-meta .tableau {
   color: #da910b;
 }
-.meta .tableau i {
+.meta .tableau i,
+.post-meta .tableau i {
   color: #da910b;
 }
-.meta .python {
+.meta .python,
+.post-meta .python {
   color: #06bdea;
 }
-.meta .python i {
+.meta .python i,
+.post-meta .python i {
   color: #06bdea;
+}
+.meta .meta-item,
+.post-meta .meta-item {
+  display: flex;
+  margin: auto 0;
+  font-family: 'akzidenz-medium';
+}
+.meta .meta-item.author span,
+.post-meta .meta-item.author span {
+  font-family: 'akzidenz';
+}
+.meta .meta-item.date span,
+.post-meta .meta-item.date span {
+  font-family: 'akzidenz' !important;
+  color: #8e8e8e !important;
+}
+.meta .meta-item.date i,
+.post-meta .meta-item.date i {
+  color: #8e8e8e !important;
+}
+.meta .meta-item *,
+.post-meta .meta-item * {
+  /*color: #6e7980;*/
+}
+.meta .meta-item a,
+.post-meta .meta-item a {
+  text-decoration: none;
+}
+.meta .meta-item a:hover,
+.post-meta .meta-item a:hover {
+  color: #40cebb;
+}
+.meta .meta-item a:hover > span,
+.post-meta .meta-item a:hover > span {
+  color: #40cebb !important;
+}
+.meta .meta-item .avi,
+.post-meta .meta-item .avi {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  margin-right: 10px;
+  border-radius: 50%;
 }
 /*====================================================
 	fonts
