--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -30,17 +30,17 @@
 			</div>
 			<div class="post-permalink">
 				<div class="meta">
+					{{#primary_tag}}
+							<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> {{name}}</span>
+					{{/primary_tag}}
 					{{#author}}
 						{{#unless profile_image}}
 							<a href="{{url}}" class="meta-item"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
 						{{/unless}}
 						{{#if profile_image}}
-							<a href="{{url}}" class="meta-item"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
+							<a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
 						{{/if}}
 					{{/author}}
-					{{#primary_tag}}
-							<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> {{name}}</span>
-					{{/primary_tag}}
 					</span>
 					<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
 					</span>
