--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -7,7 +7,7 @@
 			<!-- replace the # with your own profile link address -->
 			<li><a href="https://hackingandslacking.com"><i class="fab fa-medium-m"></i></a></li>
 			<li><a href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google-plus-g"></i></a></li>
+			<li><a href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i></a></li>
 			<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
 			<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>
 			<li><a href="#"><i class="fa  fa-pinterest"></i></a></li>
