--- a/post.hbs
+++ b/post.hbs
@@ -21,9 +21,18 @@
 						<h5>{{excerpt}}</h5>
 					</div>
 					<div class="post-meta">
-						<div class="date"><i class="fas fa-calendar"></i><span>{{date format="MMMM DD"}}</span></div>
-						<div class="author"><i class="fas fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></div>
-						<div class="tags">{{#if tags}}<i class="fas fa-tags"></i><span>{{tags limit="1"}}{{/if}}</span></div>
+						{{#primary_tag}}
+								<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> {{name}}</span>
+						{{/primary_tag}}
+						{{#author}}
+							{{#unless profile_image}}
+								<a href="{{url}}" class="meta-item"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
+							{{/unless}}
+							{{#if profile_image}}
+								<a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
+							{{/if}}
+						{{/author}}
+						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
 					</div>
 
 					<div class="post-content">
