mobile branding and share links

--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -89,9 +89,14 @@
 					}
 				}
 
-				.date {
+				.date,
+				.tags{
 					color: @white;
 					opacity: 0.5;
+
+					a {
+						color: @white;
+					}
 				}
 			}
 		}
