--- a/assets/css/less_parts/page.less
+++ b/assets/css/less_parts/page.less
@@ -1,63 +1,52 @@
 .page-template {
-
   .post-title {
-    margin: 40px 40px 10px
+    margin: 40px 40px 10px;
   }
 
   .menu {
-        margin-top: 30px;
-        margin-right: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
+    @media(max-width: 600px) {
+      width: 200px;
+      padding: 25px 20px;
+      display: flex;
+      justify-content: space-between;
+      float: right;
+      margin: 0;
+      list-style: none;
+    }
 
-        @media(max-width: 600px) {
-          width: 200px;
-          padding: 25px 20px;
-          display: flex;
-          justify-content: space-between;
-          float: right;
-          margin: 0;
-          list-style: none;
+    li {
+      display: inline-block;
+
+      a {
+        color: white;
+        font-family: 'mr-eaves-xl-modern', serif;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 600;
+        transition: all 0.2s ease-out;
+
+        &:hover {
+          color: @hover-color;
+          cursor: pointer;
         }
-
-        li {
-          display: inline-block;
-
-          a {
-            color:white;
-            font-family: 'mr-eaves-xl-modern', serif;
-            text-transform: uppercase;
-            font-size: 16px;
-            font-weight: 600;
-            transition: all 0.2s ease-out;
-
-            &:hover {
-              color: @hover-color;
-              cursor: pointer;
-            }
-          }
-        }
-  }
-
-  .page-head {
-    .post-title{
-          margin: 40px 40px 0;
+      }
     }
   }
 
+  .page-head {
+    .post-title {
+      margin: 40px 40px 0;
+    }
+  }
 
   .post-content {
     margin: 20px 40px;
-        /*width: 68%;*/
+    /*width: 68%;*/
   }
 
   p {
     margin: 0 auto 20px;
   }
-
-
-}
-
-.mobile-branding {
-@media (max-width: 800px){
-  display: block;
-}
 }
