series widgets and page nav

--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -154,8 +154,6 @@
   color: white;
   margin: 0;
   width: auto;
-  display: flex;
-  justify-content: space-between;
   background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, #001b2f 100%);
   height: 100px;
   padding: 20px;
@@ -166,6 +164,7 @@
     margin: 0;
     font-weight: 600;
     height: fit-content;
+    text-align: left;
   }
 
   span {
@@ -200,6 +199,7 @@
     transition: all 0.3s ease-out;
     @media(max-width: 1040px) {
       width: 100%;
+      margin: 0 0 30px;
     }
 
     &:hover {
@@ -243,6 +243,7 @@
         color: white;
         font-size: 12px;
         padding: 0;
+        text-align: left;
 
         i {
           margin-right: 7px;
