--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -133,12 +133,10 @@
 		li {
 			list-style: none;
 			display: inline-block;
-			// margin: 0 14px;
 			position: relative;
 
 			a {
 				color: white;
-				// text-transform: capitalize;
 				line-height: 1;
 				display: block;
 				padding: 0;
@@ -213,7 +211,7 @@
 	width: 40px;
 	height: 40px;
 	float: left;
-	margin-top: 20px;
+	margin: 15px;
 
 	img {
 		 width: 100%;
