--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -89,7 +89,7 @@
 	text-align: center;
 
 	a {
-		margin: 20px 0 0;
+		margin: 0;
 	}
 }
 
@@ -229,7 +229,7 @@ p {
 
 	.main-navigation {
 		text-align: left;
-		padding: 0 15px;
+		padding: 0;
 
 
 		.menu {
@@ -238,7 +238,6 @@ p {
 
 				a {
 					color: white;
-					font-weight: 100;
 					font-size: 17px;
 				}
 
