interim projects template

--- a/assets/css/less_parts/customtemplates.less
+++ b/assets/css/less_parts/customtemplates.less
@@ -132,11 +132,16 @@
 }
 
 .page-projects {
+  .col-md-8 {
+    background: white;
+  }
+
+  .kg-card-markdown {
+    margin-bottom: 30px;
+  }
+
   .post-content {
     margin: 0;
-    @media(max-width: 800px) {
-      width: 66%;
-    }
   }
 
   p {
