--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -21,6 +21,7 @@
 @import "less_parts/postheader.less";
 @import "less_parts/postlist.less";
 @import "less_parts/tags.less";
+@import 'less_parts/githubcard.less';
 
 
 /*====================================================
